# swap-buffer-queue

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/swap_buffer_queue/notify/: trait.Notify.js
docs/src/swap_buffer_queue/: async.rs.html  buffer.rs.html  error.rs.html  lib.rs.html  notify.rs.html  queue.rs.html  sync.rs.html  utils.rs.html  write.rs.html  write_vectored.rs.html
docs/src/swap_buffer_queue/buffer/: array.rs.html  vec.rs.html
docs/src/swap_buffer_queue/write/: array.rs.html  vec.rs.html
docs/src/swap_buffer_queue/write_vectored/: array.rs.html  vec.rs.html
docs/swap_buffer_queue/: all.html  index.html  sidebar-items.js  struct.SBQueue.html  type.AsyncSBQueue.html  type.SyncSBQueue.html
docs/swap_buffer_queue/async/: index.html  sidebar-items.js  struct.AsyncNotifier.html
docs/swap_buffer_queue/buffer/: index.html  sidebar-items.js  struct.ArrayBuffer.html  struct.BufferIter.html  struct.BufferSlice.html  struct.VecBuffer.html  trait.Buffer.html  trait.Drainable.html  trait.Resizable.html
docs/swap_buffer_queue/buffer/array/: struct.ArrayBuffer.html
docs/swap_buffer_queue/buffer/vec/: struct.VecBuffer.html
docs/swap_buffer_queue/error/: enum.DequeueError.html  enum.TryDequeueError.html  enum.TryEnqueueError.html  index.html  sidebar-items.js  struct.EnqueueError.html
docs/swap_buffer_queue/notify/: index.html  sidebar-items.js  trait.Notify.html
docs/swap_buffer_queue/queue/: struct.SBQueue.html
docs/swap_buffer_queue/sync/: index.html  sidebar-items.js  struct.SyncNotifier.html
docs/swap_buffer_queue/write/: index.html  sidebar-items.js  struct.BytesSlice.html  struct.WriteArrayBuffer.html  struct.WriteVecBuffer.html  trait.WriteBytesSlice.html
docs/swap_buffer_queue/write/array/: struct.WriteArrayBuffer.html
docs/swap_buffer_queue/write_vectored/: index.html  sidebar-items.js  struct.VectoredFrame.html  struct.VectoredSlice.html  struct.WriteVectoredArrayBuffer.html  struct.WriteVectoredVecBuffer.html
src/: async.rs  buffer.rs  error.rs  lib.rs  loom.rs  mpsc.rs  notify.rs  queue.rs  sync.rs  synchronized.rs  utils.rs  write.rs  write_vectored.rs
src/buffer/: array.rs  vec.rs
src/mpsc/: bounded.rs  error.rs  unbounded.rs
src/synchronized/: atomic_waker.rs  waker.rs  waker_list.rs
src/write/: array.rs  vec.rs
src/write_vectored/: array.rs  vec.rs
tests/: async.rs  loom.rs
(+11 files in other folders)
