[package]
name = "swap-buffer-queue"
version = "0.1.0"
edition = "2021"

[features]
default = ["futures"]
futures = ["std", "dep:futures"]
std = ["crossbeam-utils/std"]
write = []

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.5"

# See tokio Cargo.toml
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]
