[package]
name = "swap-buffer-queue"
version = "0.2.0"
edition = "2021"
exclude = [".*"]
description = "A buffering MPSC queue."
homepage = "https://github.com/wyfo/swap-buffer-queue"
readme = "README.md"
keywords = [
    "atomic",
    "lock-free",
    "no-std",
    "mpsc",
    "async",
]
categories = [
    "concurrency",
    "data-structures",
    "no-std",
]
license = "MIT"
repository = "https://github.com/wyfo/swap-buffer-queue"

[features]
default = ["stream"]
std = []
stream = ["std", "dep:futures"]
write = []

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.6.0", features = ["futures"] }

# See tokio Cargo.toml
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]
